--- a/Starter_Code/credit_risk_classification.ipynb
+++ b/Starter_Code/credit_risk_classification.ipynb
@@ -254,36 +254,17 @@
     {
      "data": {
       "text/plain": [
-       "0    0\n",
-       "1    0\n",
-       "2    0\n",
-       "3    0\n",
-       "4    0\n",
-       "Name: loan_status, dtype: int64"
+       "array([0, 1], dtype=int64)"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "77531    1\n",
-       "77532    1\n",
-       "77533    1\n",
-       "77534    1\n",
-       "77535    1\n",
-       "Name: loan_status, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Review the y variable Series\n",
-    "display(y.head())\n",
-    "display(y.tail())"
+    "y.unique()"
    ]
   },
   {
@@ -429,8 +410,7 @@
    ],
    "source": [
     "# Check the balance of our target values\n",
-    "value_count = y.value_counts()\n",
-    "value_count"
+    "y.value_counts()"
    ]
   },
   {
@@ -619,7 +599,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** Healthy loans have a .99 precision rate and unhealthy loans have a .85 precision rate. Recall for healthy loans is at .99 and .91 for unhealthy loans."
    ]
   },
   {
@@ -662,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +711,7 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +734,7 @@
        "       [    4,   615]], dtype=int64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +783,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** Healthy loans still have a .99 precision rate and unhealthy loans have a .84 precision rate. In this second model unhealthy loans dropped .01 precision points, which is insignificant. The recall for this model did improve significantly for unhealthy loans though from model one's .91 to model two's .99"
    ]
   }
  ],
